feat: 시큐리티 이름 입력